==> alibaba/AliOS-Things/platform/mcu/esp32/hal/wifi_port.c <==
#include <stdarg.h>
#include <stdio.h>
#include <string.h>
#include <network/network.h>
#include "hal/wifi.h"
#include "aos/hal/wdg.h"
#include "esp_smartconfig.h"
#include "esp_wifi_types.h"
#include "esp_wifi.h"
#include "esp_event_loop.h"
#include "esp_timer.h"
#include "nvs.h"
#include "nvs_flash.h"

static int wifi_init(hal_wifi_module_t *m)
{
    static int inited;
    int ret;
    if (inited)
        return 0;
    inited = 1;

    /* nvs flash initialization, this function may not used in aos, kv is similar function compared with nvs */
    ret = nvs_flash_init();
    if (ret == ESP_ERR_NVS_NO_FREE_PAGES) {
      ESP_ERROR_CHECK(nvs_flash_erase());
      ret = nvs_flash_init();
    }
    ESP_ERROR_CHECK(ret);

    /* Hook Event */
    ret = esp_event_loop_init(handle_event_cb, NULL);
    wifi_init_config_t cfg = WIFI_INIT_CONFIG_DEFAULT();
    ESP_ERROR_CHECK( esp_wifi_init(&cfg) );
    esp_wifi_set_mode(WIFI_MODE_STA);
    esp_wifi_start();
    hal_wdg_finalize(NULL);
    return 0;
}

static int get_ip_stat(hal_wifi_module_t *m,
                       hal_wifi_ip_stat_t *out_net_para,
                       hal_wifi_type_t wifi_type)
{
    if (wifi_type == HAL_WIFI_MODE_STATION)
        memcpy(out_net_para, &_ip_stat, sizeof(hal_wifi_ip_stat_t));
    return 0;
}

static int get_link_stat(hal_wifi_module_t *m,
                         hal_wifi_link_stat_t *out_stat)
{
    wifi_ap_record_t ap_info;

    if (ESP_OK == esp_wifi_sta_get_ap_info(&ap_info)) {
        out_stat->is_connected = 1;
        out_stat->wifi_strength = ap_info.rssi;
        memcpy(out_stat->ssid, ap_info.ssid, sizeof(out_stat->ssid));
        memcpy(out_stat->bssid, ap_info.bssid, sizeof(out_stat->bssid));
        out_stat->channel = ap_info.primary;
    }

    return 0;
}

static void start_scan_adv(hal_wifi_module_t *m)
{
    wifi_scan_helper(m, SCAN_ADV);
}

static int power_on(hal_wifi_module_t *m)
{
    printf("WiFi HAL %s not implemeted yet!\r\n", __func__);
    return 0;
}

static void start_monitor(hal_wifi_module_t *m)
{
    wifi_getset_ops(m, HAL_WIFI_PROMISCUOUS_START);
}

static void stop_monitor(hal_wifi_module_t *m)
{
    wifi_getset_ops(m, HAL_WIFI_PROMISCUOUS_STOP);
}

static void register_wlan_mgnt_monitor_cb(hal_wifi_module_t *m,
                                          monitor_data_cb_t fn)
{
    mngt_data_cb = fn;
    // Workaround for zero config <TODO>
    hal_wifi_register_monitor_cb(NULL, NULL);
    hal_wifi_start_wifi_monitor(NULL);
}

static int wlan_send_80211_raw_frame(hal_wifi_module_t *m,
                                     uint8_t *buf, int len)
{
    ESP_ERROR_CHECK(esp_wifi_80211_tx(ESP_IF_WIFI_STA, buf, len, 1));

    return 0;
}

static int get_wireless_info(hal_wifi_module_t *m, hal_wireless_info_t *wireless_info)
{
    hal_wireless_info_t *info = (hal_wireless_info_t *)wireless_info;

    printf("get wireless info\r\n");

    if (info == NULL)
        return -1;
    do {
        wifi_ap_record_t ap_info;
        if (ESP_OK != esp_wifi_sta_get_ap_info(&ap_info))
            return -1;
        if (ap_info.rssi > 0) {
            ap_info.rssi -= 128;
        }
        info->rssi = ap_info.rssi;
    } while (0);

    return 0;
}
