==> alibaba/AliOS-Things/platform/mcu/rtl8710bn/hal/wifi_port.c <==
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include "network/hal/wifi.h"
#include <hal/wifi.h>
#include <platform/platform_stdlib.h>
#include <wifi/wifi_conf.h>
#include <wifi/wifi_util.h>
#include <wifi/wifi_ind.h>
#include <lwip_netconf.h>
#include <osdep_service.h>
#define  WIFI_CONNECT_MAX_ATTEMPT_COUNT  3
#define RTL_NETMASK_ADDR0   255
#define RTL_NETMASK_ADDR1   255
#define RTL_NETMASK_ADDR2   255
#define RTL_NETMASK_ADDR3   0
#define RTL_GW_ADDR0   192
#define RTL_GW_ADDR1   168
#define RTL_GW_ADDR2   1
#define RTL_GW_ADDR3   1
#define RTL_DHCP_START_ADDR0   192
#define RTL_DHCP_START_ADDR1   168
#define RTL_DHCP_START_ADDR2   1
#define RTL_DHCP_START_ADDR3   100
#define RTL_DHCP_END_ADDR0   192
#define RTL_DHCP_END_ADDR1   168
#define RTL_DHCP_END_ADDR2   1
#define RTL_DHCP_END_ADDR3   255

static int wifi_init(hal_wifi_module_t *m)
{
    wifi_on(RTW_MODE_STA);
#if (WIFI_CONFIG_SUPPORT_LOWPOWER > 0)
    wifi_enable_powersave();
#else
    wifi_disable_powersave();
#endif
    DBG_8195A("wifi init success!!\n");
    return 0;
}

static int get_ip_stat(hal_wifi_module_t *m, hal_wifi_ip_stat_t *out_net_para, hal_wifi_type_t wifi_type)
{
    u8 *ip, *gw, *mask, *mac;

    if (!out_net_para)
        return -1;

    ip   = LwIP_GetIP(&xnetif[0]);
    gw   = LwIP_GetGW(&xnetif[0]);
    mask = LwIP_GetMASK(&xnetif[0]);
    mac  = LwIP_GetMAC(&xnetif[0]);

    out_net_para->dhcp = DHCP_CLIENT;

    snprintf(out_net_para->ip, 16, "%d.%d.%d.%d",  ip[0],  ip[1],  ip[2],  ip[3]);
    snprintf(out_net_para->gate, 16, "%d.%d.%d.%d",  gw[0],  gw[1],  gw[2],  gw[3]);
    snprintf(out_net_para->mask, 16, "%d.%d.%d.%d",  mask[0],  mask[1],  mask[2],  mask[3]);
    snprintf(out_net_para->dns, 16, "%d.%d.%d.%d",  gw[0],  gw[1],  gw[2],  gw[3]);
    snprintf(out_net_para->mac, 16, "%x%x%x%x%x%x",  mac[0],  mac[1],  mac[2],  mac[3], mac[4], mac[5]);

    DBG_8195A("get_ip_stat\r\n");            
    return 0;
}

static int get_link_stat(hal_wifi_module_t *m, hal_wifi_link_stat_t *out_stat)
{
    DBG_8195A("get_link_stat\r\n");

    u8 *ifname[2] = {WLAN0_NAME,WLAN1_NAME};
    rtw_wifi_setting_t setting;
    int rssi;
    wifi_get_setting((const char*)ifname[0],&setting);
    wifi_show_setting((const char*)ifname[0],&setting);
    out_stat->is_connected = wifi_is_ready_to_transceive(RTW_STA_INTERFACE)?0:1;
    wifi_get_rssi(&rssi);
    out_stat->wifi_strength = rssi;
    strcpy(out_stat->ssid, setting.ssid);
    out_stat->channel = setting.channel;
    
    return 0;
}

static int get_wireless_info(hal_wifi_module_t *m, void *wireless_info)
{
    int rssi, snr;
    unsigned long int suc = 0;
    unsigned long int drop = 0;

    rtw_fw_retry_drop_t fw_statis = {0};
    rtw_net_device_stats_t sw_statis = {0}, tmp;

    hal_wireless_info_t *info = (hal_wireless_info_t *)wireless_info;

    DBG_8195A("get wireless info\r\n");

    if (info == NULL)
        return -1;

    wifi_get_rssi(&rssi);
    wifi_get_snr(&snr);
    wifi_get_retry_drop_num(&fw_statis);
    wifi_get_sw_trx_statistics(&sw_statis);

    memcpy(&tmp, &sw_statis, sizeof(tmp));
    sw_statis.rx_packets = sw_statis.rx_packets - last_sw_statis.rx_packets;
    sw_statis.tx_packets = sw_statis.tx_packets - last_sw_statis.tx_packets;
    sw_statis.rx_dropped = sw_statis.rx_dropped - last_sw_statis.rx_dropped;
    sw_statis.tx_dropped = sw_statis.tx_dropped - last_sw_statis.tx_dropped;
    memcpy(&last_sw_statis, &tmp, sizeof(tmp));

    suc = fw_statis.retry_0;
    suc += fw_statis.retry_1;
    suc += fw_statis.retry_2;
    suc += fw_statis.retry_3;
    suc += fw_statis.retry_4;
    suc += sw_statis.tx_packets;
    suc += sw_statis.rx_packets;

    drop += fw_statis.retry_drop;
    drop += sw_statis.tx_dropped;
    drop += sw_statis.rx_dropped;

    if (rssi > 0) {
        if (rssi >= 128) rssi = 127;
        rssi -= 128;
    }

    info->rssi = rssi;
    info->snr = snr;
    info->per = drop * 1000000 / (drop + suc);

    return 0;
}

static void start_scan_adv(hal_wifi_module_t *m)
{
    DBG_8195A("start_scan_adv, %d\r\n", rtw_getFreeHeapSize());
    fATWS(NULL);        
    return;
}

static int power_on(hal_wifi_module_t *m)
{
    wifi_on(RTW_MODE_STA); 
    wifi_disable_powersave();      
    return 0;
}

static void start_monitor(hal_wifi_module_t *m)
{
    DBG_8195A("start_monitor\r\n");
    
#if CONFIG_AUTO_RECONNECT
    wifi_set_autoreconnect(RTW_AUTORECONNECT_DISABLE);
#endif
    
    wifi_enter_promisc_mode();
    wifi_set_promisc(RTW_PROMISC_ENABLE_2, wifi_promisc_hdl, 0);
    return;
}

static void stop_monitor(hal_wifi_module_t *m)
{
    DBG_8195A("stop_monitor\r\n");

    aos_task_new("wifi", wifi_stop_monitor_task, NULL, 1024);
    g_promisc_callback = NULL;

    return;
}

static void register_wlan_mgnt_monitor_cb(hal_wifi_module_t *m, monitor_data_cb_t fn)
{
    //DBG_8195A("register_wlan_mgnt_monitor_cb fn 0x%x\r\n", fn);
#if (WIFI_CONFIG_SUPPORT_LOWPOWER > 0)
    if (fn != NULL) {
        wifi_disable_powersave();
    }
#endif
    g_mgnt_link_info.rssi = 0;
    g_mgnt_filter_callback = fn;

    if (fn == NULL) {
        wifi_set_indicate_mgnt(0);
    } else {
        wifi_set_indicate_mgnt(1);
    }
    wifi_reg_event_handler(WIFI_EVENT_RX_MGNT, wifi_rx_mgnt_hdl, NULL);
    
#if (WIFI_CONFIG_SUPPORT_LOWPOWER > 0)
    if (fn == NULL) {
        wifi_enable_powersave();
    }
#endif
    return;
}

static int wlan_send_80211_raw_frame(hal_wifi_module_t *m, uint8_t *buf, int len)
{
    int ret = 0;
    const char *ifname = WLAN0_NAME;
   
    len = len - 4; /* remove fcs */
    ret = wext_send_mgnt(ifname, (char*)buf, len, 1);
    return 0;
}
